--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ jobs:
           name: Create Kubernetes Manifest
           command: |
             deploy_image=$imagename"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_PREVIOUS_BUILD_NUM
-            cat manifest_template.yaml | sed "s/<IMAGE_NAME>/${deploy_image}/g" > web.yaml
+            cat manifest_template.yaml | sed -e "s/<IMAGE_NAME>/${deploy_image}/g" > web.yaml
 #            echo "      - image: "$deploy_image >> web1.yaml
 #            cat web2.yaml >> web1.yaml
             
