--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,16 +93,16 @@ jobs:
           name: Create Kubernetes Manifest
           command: |
             deploy_image=$imagename"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_PREVIOUS_BUILD_NUM
-            cat manifest_template.yaml | sed -e "s/<IMAGE_NAME>/${deploy_image}/g" > web.yaml
-#            echo "      - image: "$deploy_image >> web1.yaml
-#            cat web2.yaml >> web1.yaml
+#            cat manifest_template.yaml | sed -e "s/<IMAGE_NAME>/${deploy_image}/g" > web.yaml
+            echo "      - image: "$deploy_image >> web.yaml
+            cat web2.yaml >> web.yaml
             
 #      - run:
 #          name: Twistlock scan IaC
 #          command: |
 #            curl -k -u $tl_u:$tl_p --output twistcli $TL_URL"/api/v1/util/twistcli"
 #            chmod +x twistcli
-#            ./twistcli iac scan --publish --compliance-threshold $comp -u $tl_u -p $tl_p --address $TL_URL web1.yaml
+#            ./twistcli iac scan --publish --compliance-threshold $comp -u $tl_u -p $tl_p --address $TL_URL web.yaml
             
       - run:
           name: deployment
