--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,10 +92,11 @@ jobs:
       - run:
           name: Create Kubernetes Manifest
           command: |
-            deploy_image=$imagename"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_PREVIOUS_BUILD_NUM
-            echo "      - image: "$deploy_image >> web.yaml
-            cat web2.yaml >> web.yaml
-#            cat manifest_template.yaml | sed -e "s/<IMAGE_NAME>/${deploy_image}/g" > web.yaml            
+            deploy_image="${imagename}¥/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_PREVIOUS_BUILD_NUM}"
+            cat manifest_template.yaml | sed -e 's/<IMAGE_NAME>/'${deploy_image}'/g' > web.yaml            
+#            deploy_image=$imagename"/"$CIRCLE_PROJECT_REPONAME":"$CIRCLE_PREVIOUS_BUILD_NUM
+#            echo "      - image: "$deploy_image >> web.yaml
+#            cat web2.yaml >> web.yaml
 #      - run:
 #          name: Twistlock scan IaC
 #          command: |
